Add ability to show/hide parameters

Use only regexp to:
* extract name and parameters
* detect if function is a method or not

BUG: 454582